// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoading 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "this is a loading message",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "zbay.io/channel/this-is-a-hash",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel fetches messages 1`] = `
Immutable.List [
  Immutable.DisplayableMessage {
    "id": "test-1",
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is some message test-1",
    "spent": "0.2",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
  },
  Immutable.DisplayableMessage {
    "id": "test-2",
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is some message test-2",
    "spent": "0.2",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
  },
]
`;

exports[`channel reducer handles epics - loadChannel sets uri 1`] = `"zbay.io/channel/eJxNizEOgCAMAL9iGkcdWF19CUqjDVKMRY0S/i4YB6dL7nIRWDuEDvpZM+NSKWhAG7OhSLa3qIASPlGXaFDGjdZAnn+bHvwe3tnilc8IdNjciUfviKf2IDwLc24VpPQAl0oo4g=="`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "message-op-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-1",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      "channelId": "",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "this is some message",
  "sender": Object {
    "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "username": "Saturn",
  },
  "type": 1,
}
`;

exports[`channel reducer handles epics -clearNewMessages clears new messages for current channel 1`] = `
Immutable.ChannelMessages {
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": "test-1",
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is some message test-1",
      "spent": "0.2",
    },
    Immutable.ReceivedMessage {
      "id": "test-2",
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is some message test-2",
      "spent": "0.2",
    },
  ],
  "newMessages": Immutable.List [],
}
`;
